--- a/src/main/resources/templates/createGarage.html
+++ b/src/main/resources/templates/createGarage.html
@@ -7,53 +7,57 @@
 <body>
 
 <div th:replace="~{fragments/navbar :: navbar}">
-  Navbar
+    Navbar
 </div>
 
 <div class="container">
-  <h2 class="text-center text-white"> = Create garage = A page for drivers</h2>
+    <h2 class="text-center text-white"> = Create garage = A page for drivers</h2>
 </div>
 
 <div class="card" style="width: auto">
-  <!--            <img src="..." class="card-img-top" alt="...">-->
-              <div class="card-body">
-                  <form id=addForm method="post"
-                        th:action="@{/api/garages}"
-                        class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
-  <!--                    <input type="hidden" id="id" name="id" th:object="${client}" th:value="${client.id}">-->
-                      <div  class="form-group">
-                          <label for="address" class="text-white font-weight-bold">Address</label>
-                          <input id="address"
-                                 name="address"
-                                 type="text"
-                                 class="form-control"
-                                 placeholder="address"/>
-                      </div>
-                    
+    <!--            <img src="..." class="card-img-top" alt="...">-->
+    <input type="hidden" id="id" name="id" th:object="${admin}" th:value="${admin.id}">
+    <div class="card-body">
+        <form id=addForm method="post"
+              th:action="@{/api/admins//{id}/createGarage(id=*{id})}"
+              th:object="${garageAddBindingModel}"
+              class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
+            <!--                    <input type="hidden" id="id" name="id" th:object="${client}" th:value="${client.id}">-->
+            <div  class="form-group">
+                <label for="address" class="text-white font-weight-bold">Address</label>
+                <input id="address"
+                       name="address"
+                       type="text"
+                       class="form-control"
+                       placeholder="address"/>
+                <small th:errors="*{address}" id="addressError" class="invalid-feedback form-text bg-danger rounded">Name must be between 3 and 20
+                    characters</small>
+            </div>
 
-                      <div class="form-group">
-                          <input type="submit"
-                                 class="btn"
-                                 id="postOrder"
-                                 value="Post Order"/>
-                      </div>
- 
-                  </form>
-              </div>
-  
-  
-  
-  
-  
-          </div>
-      
+
+            <div class="form-group">
+                <input type="submit"
+                       class="btn"
+                       id="postOrder"
+                       value="Post Order"/>
+            </div>
+
+        </form>
+    </div>
 
 
 
-          <script th:src="@{/Js/AddNewitem.js}"></script>
+
+
+</div>
+
+
+
+
+<script th:src="@{/Js/AddNewitem.js}"></script>
 
 <div>
-  <footer></footer>
+    <footer></footer>
 </div>
 </body>
 </html>
