--- a/src/main/resources/templates/driverDash.html
+++ b/src/main/resources/templates/driverDash.html
@@ -56,6 +56,33 @@
             </div>
         </div>
 
+        <!-- info about orders done - total mileage/total cost/amount|| info about subscribnion if any ==so two cards bellow -->
+<!--        <div class="row">-->
+<!--            <div class="col-md-3">-->
+<!--                <div class="card mb-4 box-shadow">-->
+<!--                    <img src="/image/metallica.jpg" class="card-img-top" alt="Thumbnail [100%x225]"-->
+<!--                         data-holder-rendered="true"-->
+<!--                         style="height: 225px; width: 100%; display: block;">-->
+<!--                    <div class="card-body">-->
+<!--                        <div class="text-center">-->
+<!--                            <p class="card-text border-bottom ">Name: Name of album</p>-->
+<!--                            <p class="card-text border-bottom ">Artist: Metallica</p>-->
+<!--                            <p class="card-text border-bottom ">Genre: Metal</p>-->
+<!--                            <p class="card-text border-bottom ">Price: 19.99</p>-->
+<!--                            <p class="card-text border-bottom">Release Date: </p>-->
+<!--                        </div>-->
+<!--                        <div class="d-flex justify-content-between align-items-center">-->
+<!--                            <div class="btn-group">-->
+<!--                                <a type="button" class="btn btn-sm btn-outline-secondary">Delete</a>-->
+<!--                            </div>-->
+<!--                            <small class="text-muted">1000 copies</small>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+
+
 
         <script th:src="@{/Js/newDriver.js}"></script>
         <div>
