--- a/src/main/resources/templates/adminDash.html
+++ b/src/main/resources/templates/adminDash.html
@@ -140,7 +140,7 @@
 
           <h5 class="card-title">Create Garage</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a th:href="@{/admins//{id}/createGarage(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
+          <a th:href="@{/admins/{id}/createGarage(id=${#authentication.principal.id})}" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
