--- a/src/main/resources/templates/createDriver.html
+++ b/src/main/resources/templates/createDriver.html
@@ -13,13 +13,13 @@
 <div class="container">
     <h2 class="text-center text-white"> = Create driver = A page for drivers</h2>
 </div>
-<input type="hidden" id="id" name="id" th:object="${admin}" th:value="${admin.id}">
+<!--<input type="hidden" id="id" name="id" th:object="${admin}" th:value="${admin.id}">-->
 
 <div class="container">
     <h2 class="text-center text-white">Create Driver</h2>
-    <form
+    <form id=addForm
             class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center"
-            method="POST" th:action="@{/api/admins/{id}/createDriver(id=*{id})}" th:object="${driverAddBindingModel}" >
+            method="post" th:action="@{/api/admins/{id}/createDriver(id=${admin.id})}"  >
         <div class="row">
             <div class="form-group col-md-6 mb-3">
                 <label for="firstName" class="text-white font-weight-bold">First Name</label>
@@ -29,7 +29,7 @@
                         type="text"
                         class="form-control"
                         placeholder="First name"/>
-                <small th:errors="*{firstName}" id="firstNameError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="firstNameError" class="invalid-feedback form-text bg-danger rounded">error</small>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label  for="lastName" class="text-white font-weight-bold">Last Name</label>
@@ -38,7 +38,7 @@
                         name="lastName"
                         type="text" min="2" max="20" class="form-control"
                         placeholder="Last name"/>
-                <small th:errors="*{lastName}" id="lastNameError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="lastNameError" class="invalid-feedback form-text bg-danger rounded">error</small>
             </div>
             <!-- THIS MIN=2 MAX=20 TO CHECK IT AS OPTION -->
 
@@ -49,18 +49,20 @@
                 <input
                         id="email"
                         name="email"
-                        type="text" min="2" max="20" class="form-control"
+                        type="text" class="form-control"
                         placeholder="Email"/>
-                <small th:errors="*{email}" id="emailError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="emailError" class="invalid-feedback form-text bg-danger rounded">error</small>
             </div>
+        </div>
+
 
             <div class="form-group col-md-6 mb-3">
-                <select   id="registration" name="registration" class="custom-select"
+                <select id="registration" name="registration" class="custom-select"
                           aria-describedby="registration">
                     <option value="" selected>Registration No.</option>
-                    <option th:each="s : ${T(com.SoftUni.DriverServiceProject.Models.Entity.Car.).values()}" value="">Car No.</option>
+                    <option th:each="g : ${cars}" th:object="${g}" th:value="*{registration}" th:text="*{registration}">Car No.</option>
                 </select>
-                <small th:errors="*{registration}" id="registrationError" class="invalid-feedback bg-danger text-light rounded">
+                <small  id="registrationError" class="invalid-feedback bg-danger text-light rounded">
                     error
                 </small>
             </div>
@@ -69,9 +71,9 @@
                 <label for="password" class="text-white font-weight-bold">Password</label>
                 <input id="password"
                        name="password"
-                       type="password" min="2" max="20" class="form-control"
+                       type="password"  class="form-control"
                        placeholder="Password"/>
-                <small th:errors="*{password}" id="passwordError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="passwordError" class="invalid-feedback form-text bg-danger rounded">error</small>
             </div>
             <!-- from JS send class to be is-invalid so it will show the small so it needs to show text question is how it pass // it could just validate in DTO and message to be here as fixed text-->
 
@@ -83,7 +85,7 @@
                         name="confirmPassword"
                         type="password" min="2" max="20" class="form-control"
                         placeholder="Confirm your password"/>
-                <small th:errors="*{confirmPassword}" id="confirmPasswordError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small  id="confirmPasswordError" class="invalid-feedback form-text bg-danger rounded">error</small>
                 <!-- <p class="invalid-feedback errors alert alert-danger">
                   Confirmation password is required.
                 </p> -->
@@ -91,12 +93,12 @@
             <!-- /// neeed to add car!!!! -->
 
             <div class="row">
-                <div class="col col-md-4">
+                <div class="form-group col col-md-4">
                     <!--        <div class="button-holder d-flex">-->
                     <!--          <input type="submit" class="btn btn-info btn-lg" value="Create account"/>-->
                     <!--        </div>-->
                     <div class="button-holder d-flex justify-content-center">
-                        <button type="submit" class="btn btn-warning  mb-3" value="Create account">Create account</button>
+                        <button type="submit" class="btn btn-warning  mb-3" value="Create Driver">Add New Driver</button>
                     </div>
 
                 </div>
@@ -105,8 +107,9 @@
 
 
 
-    <script th:src="@{/Js/AddNewitem.js}"></script>
+
 </div>
+<script th:src="@{/Js/addNewItem.js}"></script>
 <div>
     <footer></footer>
 </div>
