some fixes by change of email and subscriptions

--- a/src/main/resources/templates/Change-UserName.html
+++ b/src/main/resources/templates/Change-UserName.html
@@ -22,17 +22,6 @@
               class="main-form mx-auto col-md-8 d-flex flex-column justify-content-center">
 
             <div  class="form-group">
-                <label for="currentEmail" class="text-white font-weight-bold">Current email</label>
-                <input id="currentEmail"
-                       name="currentEmail"
-                       type="text"
-                       class="form-control"
-                       placeholder="currentEmail"/>
-                <small id="currentEmailError" class="invalid-feedback">
-                    Current email should be valid email address.
-                </small>
-            </div>
-            <div  class="form-group">
                 <label for="newEmail" class="text-white font-weight-bold">New Email</label>
                 <input id="newEmail"
                        name="newEmail"
@@ -41,6 +30,17 @@
                        placeholder="newEmail"/>
                 <small id="newEmailError" class="invalid-feedback">
                     New email should be valid email address.
+                </small>
+            </div>
+            <div  class="form-group">
+                <label for="confirmationEmail" class="text-white font-weight-bold">Confirm New Email</label>
+                <input id="confirmationEmail"
+                       name="confirmationEmail"
+                       type="text"
+                       class="form-control"
+                       placeholder="confirmationEmail"/>
+                <small id="confirmationEmailError" class="invalid-feedback">
+                    Current email should be valid email address.
                 </small>
             </div>
             <div class="form-group">
