--- a/src/main/resources/templates/adminDash.html
+++ b/src/main/resources/templates/adminDash.html
@@ -85,9 +85,9 @@
 
 
         <div class="card-body">
-          <h5 class="card-title">Create new Subscription Option</h5>
-          <p class="card-text"> Creation of new subscription options.</p>
-          <a th:href="@{/admins/{id}/createSubscription(id=${#authentication.principal.id})}" class="btn btn-primary">Create</a>
+          <h5 class="card-title">change the Subscription Options</h5>
+          <p class="card-text"> Change of subscription options.</p>
+          <a th:href="@{/admins/{id}/changeSubscription(id=${#authentication.principal.id})}" class="btn btn-primary">Change</a>
 
         </div>
       </div>
