--- a/src/main/resources/templates/changeSubscription.html
+++ b/src/main/resources/templates/changeSubscription.html
@@ -10,7 +10,7 @@
 
 </div>
 <div class="container">
-    <h1 class="display-5 text-center"><strong class="bg-blur rounded">Create SubscriptionType</strong></h1>
+    <h1 class="display-5 text-center"><strong class="bg-blur rounded">Change SubscriptionType</strong></h1>
     <h1 class="display-5"><strong class="bg-blur rounded"></strong></h1>
 </div>
 
@@ -20,7 +20,7 @@
 
 <div class="container-fluid">
     <form id=addForm method="post"
-          th:action="@{/api/admins/{id}/createSubscription(id=${admin.id})}"
+          th:action="@{/api/admins/{id}/changeSubscription(id=${admin.id})}"
           class="main-form mx-auto  justify-content-center">
 
         <div  class="form-group">
@@ -63,8 +63,8 @@
         <div class="form-group">
             <input type="submit"
                    class="btn"
-                   id="createSubscriptionType"
-                   value="Create Subscription Type"/>
+                   id="changeSubscriptionType"
+                   value="Change Subscription Type"/>
         </div>
 
     </form>
@@ -72,7 +72,7 @@
 </div>
 
 
-<script th:src="@{/Js/addNewItem.js}"></script>
+<script th:src="@{/Js/ChangeSubscription.js}"></script>
 
 <div>
     <footer></footer>
