--- a/src/main/resources/templates/auth-register.html
+++ b/src/main/resources/templates/auth-register.html
@@ -25,6 +25,9 @@
             type="text"
             class="form-control"
             placeholder="First name"/>
+        <small th:each="err:${#fields.errors('firstName')}" th:text="${err}"
+               id="firstNameError"
+               class="text-light form-text bg-danger rounded"></small>
       </div>
       <div class="form-group col-md-6 mb-3">
         <label  for="lastName" class="text-white font-weight-bold">Last Name</label>
@@ -33,6 +36,9 @@
                name="lastName"
                type="text" min="2" max="20" class="form-control"
                placeholder="Last name"/>
+        <small th:each="err:${#fields.errors('lastName')}" th:text="${err}"
+               id="lastNameError"
+               class="text-light form-text bg-danger rounded"></small>
       </div>
 
     </div>
@@ -44,6 +50,9 @@
                name="email"
                type="text" min="2" max="20" class="form-control"
                placeholder="Email"/>
+        <small th:each="err:${#fields.errors('email')}" th:text="${err}"
+               id="emailError"
+               class="text-light form-text bg-danger rounded">Must be valid email</small>
       </div>
       <div class="form-group col-md-6 mb-3">
         <label for="password" class="text-white font-weight-bold">Password</label>
@@ -51,6 +60,9 @@
                name="password"
                type="password" min="2" max="20" class="form-control"
                placeholder="Password"/>
+        <small th:each="err:${#fields.errors('password')}" th:text="${err}" id="passwordError"
+               class="text-light form-text bg-danger rounded">Password length must be between 5 and 20 characters
+          characters</small>
       </div>
     </div>
     <div class="form-group col-md-6 mb-3">
@@ -60,9 +72,7 @@
              name="confirmPassword"
              type="password" min="2" max="20" class="form-control"
              placeholder="Confirm your password"/>
-      <p class="invalid-feedback errors alert alert-danger">
-        Confirmation password is required.
-      </p>
+      <small th:each="err:${#fields.errors('confirmPassword')}" th:text="${err}" id="confirmPasswordError" class="text-light form-text bg-danger rounded">Password length must be between 5 and 20 characters</small>
     </div>
 
     <div class="row">
