--- a/src/main/resources/templates/createCar.html
+++ b/src/main/resources/templates/createCar.html
@@ -25,8 +25,7 @@
                type="text"
                class="registration"
                placeholder="registration"/>
-        <small  id="registrationError" class="invalid-feedback form-text bg-danger rounded">Name must be between 3 and 20
-            characters</small>
+        <small  id="registrationError" class="invalid-feedback form-text bg-danger rounded">Registration number should be between 4 and 8 characters.</small>
         <!-- to check different options for the error if this not works-->
     </div>
 
@@ -37,8 +36,8 @@
                type="text"
                class="form-control"
                placeholder="brand"/>
-        <small  id="brandError" class="invalid-feedback form-text bg-danger rounded">Name must be between 3 and 20
-            characters</small>
+        <small  id="brandError" class="invalid-feedback form-text bg-danger rounded">Brand must be between 3 and 20
+            characters.</small>
         <!-- to check different options for the error if this not works-->
     </div>
 
@@ -49,20 +48,21 @@
                type="text"
                class="form-control"
                placeholder="model"/>
-        <small  id="modelError" class="invalid-feedback form-text bg-danger rounded">error</small>
+        <small  id="modelError" class="invalid-feedback form-text bg-danger rounded">Model must be between 3 and 20
+            characters.</small>
     </div>
 
     <div class="form-group row">
         <label for="type" class="col-sm-2 col-form-label">Type</label>
-        <div class="col-sm-10">
+            <div>
             <!-- th:field="*{category}" -->
             <select  id="type" name="type" class="custom-select"
                      aria-describedby="type">
-                <option value="" selected>Type</option>
+
                 <option th:each="s : ${T(com.SoftUni.DriverServiceProject.Models.Enums.CarTypeEnum).values()}" th:value="${s}" th:text="${s}">Type</option>
             </select>
-            <small  id="typeError" class="invalid-feedback form-text bg-danger rounded">error</small>
-        </div>
+            <small  id="typeError" class="invalid-feedback form-text bg-danger rounded">Please select car type.</small>
+            </div>
     </div>
 
     <div  class="form-group">
@@ -72,7 +72,7 @@
                type="text"
                class="form-control"
                placeholder="kms"/>
-        <small  id="kmsError" class="invalid-feedback form-text bg-danger rounded">error</small>
+        <small  id="kmsError" class="invalid-feedback form-text bg-danger rounded">Please provide information about mileage of the car.</small>
     </div>
 
     <div class="form-group row">
@@ -85,7 +85,7 @@
                 <option th:each="g : ${garages}" th:object="${g}" th:value="*{address}" th:text="*{address}">Garage</option>
             </select>
             <small id="addressError" class="invalid-feedback bg-danger text-light rounded">
-                error
+                Car should have maintenance garage.
             </small>
         </div>
     </div>
