--- a/src/main/resources/templates/createDriver.html
+++ b/src/main/resources/templates/createDriver.html
@@ -29,7 +29,7 @@
                         type="text"
                         class="form-control"
                         placeholder="First name"/>
-                <small id="firstNameError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="firstNameError" class="invalid-feedback form-text bg-danger rounded">First name length must be between 3 and 20 characters.</small>
             </div>
             <div class="form-group col-md-6 mb-3">
                 <label  for="lastName" class="text-white font-weight-bold">Last Name</label>
@@ -38,7 +38,7 @@
                         name="lastName"
                         type="text" min="2" max="20" class="form-control"
                         placeholder="Last name"/>
-                <small id="lastNameError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="lastNameError" class="invalid-feedback form-text bg-danger rounded">First name length must be between 3 and 20 characters.</small>
             </div>
             <!-- THIS MIN=2 MAX=20 TO CHECK IT AS OPTION -->
 
@@ -51,7 +51,7 @@
                         name="email"
                         type="text" class="form-control"
                         placeholder="Email"/>
-                <small id="emailError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="emailError" class="invalid-feedback form-text bg-danger rounded">Please provide valid e-mail address.</small>
             </div>
         </div>
 
@@ -63,7 +63,7 @@
                     <option th:each="g : ${cars}" th:object="${g}" th:value="*{registration}" th:text="*{registration}">Car No.</option>
                 </select>
                 <small  id="registrationError" class="invalid-feedback bg-danger text-light rounded">
-                    error
+                    Driver should have a car.
                 </small>
             </div>
 
@@ -73,7 +73,7 @@
                        name="password"
                        type="password"  class="form-control"
                        placeholder="Password"/>
-                <small id="passwordError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small id="passwordError" class="invalid-feedback form-text bg-danger rounded">Password length must be between 3 and 20 characters.</small>
             </div>
             <!-- from JS send class to be is-invalid so it will show the small so it needs to show text question is how it pass // it could just validate in DTO and message to be here as fixed text-->
 
@@ -85,7 +85,7 @@
                         name="confirmPassword"
                         type="password" min="2" max="20" class="form-control"
                         placeholder="Confirm your password"/>
-                <small  id="confirmPasswordError" class="invalid-feedback form-text bg-danger rounded">error</small>
+                <small  id="confirmPasswordError" class="invalid-feedback form-text bg-danger rounded">Confirm Password</small>
                 <!-- <p class="invalid-feedback errors alert alert-danger">
                   Confirmation password is required.
                 </p> -->
