--- a/src/main/resources/templates/createGarage.html
+++ b/src/main/resources/templates/createGarage.html
@@ -30,8 +30,8 @@
                        type="text"
                        class="form-control"
                        placeholder="address"/>
-                <small id="addressError" class="invalid-feedback form-text bg-danger rounded">Name must be between 3 and 20
-                    characters</small>
+                <small id="addressError" class="invalid-feedback form-text bg-danger rounded">Address must be between 5 and 50
+                    characters.</small>
             </div>
 
 
